# personal-kanban

./: .gitignore  Cargo.toml  DOMAIN.md  Justfile  README.md  SPEC.md  flake.nix
.pi/orchestrator-builder-session-1144b7f3-4034-4dd6-8f55-9e5a2e8fb0bc/: 2026-07-20T08-51-30-723Z_019f7eb9-2523-76fe-ac11-34e22d890d8f.jsonl
.pi/orchestrator-builder-session-16f64e84-3183-48fb-a4fe-eea847e5fba4/: 2026-07-20T02-17-29-537Z_019f7d50-68c1-79d9-8085-2c20580f9913.jsonl
.pi/orchestrator-builder-session-6ac2d883-6c3e-41ef-aeaa-4fc0f0206093/: 2026-07-20T03-33-43-308Z_019f7d96-330c-791c-9895-961a24439c01.jsonl
.pi/orchestrator-builder-session-70845acf-3ca1-4e41-8d32-d0b0dcb9ed57/: 2026-07-20T02-56-53-552Z_019f7d74-7b30-77ed-8feb-4baa9c14a261.jsonl
.pi/orchestrator-builder-session-763cb606-ab1c-4ef3-9dbd-3fb9d5a0c32e/: 2026-07-19T21-45-02-512Z_019f7c56-f930-7a0f-96d3-53add3c86d16.jsonl
.pi/orchestrator-builder-session-8a53cc72-dcfa-4f7b-b283-da20163bbe85/: 2026-07-20T03-27-01-085Z_019f7d90-0fdd-7ee2-be3f-ea01e551e2c2.jsonl
.pi/orchestrator-builder-session-9f30d965-5178-47fc-8775-9b5b8c954ced/: 2026-07-20T08-43-46-193Z_019f7eb2-0e91-75e5-af9d-c766277f3073.jsonl
.pi/orchestrator-builder-session-c05d21dc-39dd-444b-a121-cad2069e5f16/: 2026-07-20T03-53-41-806Z_019f7da8-7cae-7f29-8134-b498b6870a62.jsonl
migrations/: 001_initial_schema.sql
specs/: add-task-edit-mode.md  fix-edit-field-cycle-priority.md  view-task-edit-field.md
src/: lib.rs  main.rs
src/cli/: interactive.rs  mod.rs  output.rs
src/core/: error.rs  id.rs  mod.rs  position.rs  (+3 more)
tests/: ops_integration.rs
(+31 files in other folders)
